compiler/snapshots/logic.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling logic.wipple... done

stdout:
b
a
