compiler/snapshots/math.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling math.wipple... done

stdout:
3
3
15
2.5
