compiler/snapshots/mismatched-types.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling mismatched-types.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`42` (compiler/tests/mismatched-types.wipple:3:2-3:4) (conflicting-types):

  `42` (compiler/tests/mismatched-types.wipple:3:2-3:4) is a `Number` (compiler/tests/mismatched-types.wipple:3:2-3:4) or a `String` (compiler/tests/mismatched-types.wipple:3:8-3:14), but it can only be one of these.

  `42` (compiler/tests/mismatched-types.wipple:3:2-3:4) must be the same type as `42 :: String` (compiler/tests/mismatched-types.wipple:3:2-3:14), `String` (compiler/tests/mismatched-types.wipple:3:8-3:14), and `(42 :: String)` (compiler/tests/mismatched-types.wipple:1:1-3:15); double-check these.

  -  `42` (compiler/tests/mismatched-types.wipple:3:2-3:4) is a Number.
