compiler/snapshots/missing-closing-parenthesis.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling missing-closing-parenthesis.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`(` (compiler/tests/missing-closing-parenthesis.wipple:3:6-3:7) (syntax-error):

  Unexpected `(`.

  Check your spelling.
