compiler/snapshots/missing-inputs.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling missing-inputs.wipple... done
Error: compilation failed with 2 feedback item(s)

stdout:

Feedback:

`show` (compiler/tests/missing-inputs.wipple:3:1-3:5) (incomplete-type):

  Missing information for the type of `show` (compiler/tests/missing-inputs.wipple:3:1-3:5).

  Wipple determined this code is `_ -> ()` (library/src/foundation/io.wipple:11:9-11:20), but it needs some more information for the `_` placeholders.

`value` (library/src/foundation/io.wipple:11:9-11:14) (unknown-type):

  Could not determine the type of `value` (library/src/foundation/io.wipple:11:9-11:14).

  Wipple needs to know the type of this code before running it. Try using a function or assigning it to a variable.
