compiler/snapshots/missing-runtime-type.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling missing-runtime-type.wipple... done

stdout:
done
