compiler/snapshots/mutable.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling mutable.wipple... done

stdout:
2
