compiler/snapshots/negate.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling negate.wipple... done

stdout:
True
