compiler/snapshots/nested-bounds-2.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling nested-bounds-2.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`value` (compiler/tests/nested-bounds-2.wipple:10:13-10:18) (unknown-type):

  Could not determine the type of `value` (compiler/tests/nested-bounds-2.wipple:10:13-10:18).

  Wipple needs to know the type of this code before running it. Try using a function or assigning it to a variable.
